RESOLVED FIXED34013
Crash in fast/dom/Window/window-properties if Geolocation enabled
https://bugs.webkit.org/show_bug.cgi?id=34013
Summary Crash in fast/dom/Window/window-properties if Geolocation enabled
Steve Falkenburg
Reported 2010-01-22 11:44:36 PST
fast/dom/Window/window-properties crashes if Geolocation is enabled due to a null dereference.
Attachments
add null check (1.50 KB, patch)
2010-01-22 11:46 PST, Steve Falkenburg
mitz: review+
Steve Falkenburg
Comment 1 2010-01-22 11:46:08 PST
Created attachment 47215 [details] add null check
Steve Falkenburg
Comment 2 2010-01-22 11:50:46 PST
Note You need to log in before you can comment on or make changes to this bug.