Crash in fast/dom/Window/window-properties if Geolocation enabled https://bugs.webkit.org/show_bug.cgi?id=34013

Reviewed by Dan Bernstein.

Add null check to fix Geolocation crash in fast/dom/Window/window-properties.

* page/Geolocation.cpp:
(WebCore::createGeoposition):



Canonical link: https://commits.webkit.org/45107@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53708 268f45cc-cd09-0410-ab3c-d52691b4dbfc